# pytest-crayons

./: .coveragerc  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/: RELEASING.md  build.yml
.github/workflows/: build.yml  pypi-package.yml
examples/: test_blue.py  test_example.py  test_example_two.py
src/pytest_crayons/: plugin.py
tests/: test_colors.py
