[project]
name = "pytest-crayons"
description = "A pytest plugin for colorful print statements"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.7"
dynamic = ["version"]
authors = [{name = "Brian Okken"}]
dependencies = ["pytest"]
classifiers = ["Framework :: Pytest"]

[project.urls]
Home = "https://github.com/okken/pytest-crayons"

[project.entry-points.pytest11]
pytest_crayons = "pytest_crayons.plugin"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pytest_crayons"
