[project]
name = "pytest-crayons"
description = "A pytest plugin for colorful print statements"
version = "0.0.4"
authors = [{name = "Brian Okken"}]
requires-python = ">3.7"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["pytest"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest"
    ]

[project.urls]
Home = "https://github.com/okken/pytest-crayons"

[project.entry-points.pytest11]
crayons = "pytest_crayons"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pytest_crayons"
