[project]
name = "pytest-crayons"
description = "A pytest plugin for colorful print statements"
authors = [{name = "Brian Okken"}]
requires-python = ">=3.7"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["pytest"]
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest"
    ]

[project.urls]
Home = "https://github.com/okken/pytest-crayons"

[project.entry-points.pytest11]
crayons = "pytest_crayons"


[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools_scm]
